adds api with fake mongo db
